Bug 142915 - FILEOPEN PPTX Slideshow setting “Manual forwarding” not imported
Summary: FILEOPEN PPTX Slideshow setting “Manual forwarding” not imported
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.3.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Tibor Nagy (NISZ)
URL:
Whiteboard: target:7.3.0
Keywords: filter:pptx
Depends on:
Blocks: PPTX-SlideShowSettings
  Show dependency treegraph
 
Reported: 2021-06-17 13:01 UTC by NISZ LibreOffice Team
Modified: 2021-08-10 06:17 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Example file from PowerPoint with manual forwarding (36.20 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-06-17 13:01 UTC, NISZ LibreOffice Team
Details
Screenshot of the document with manual forwarding side by side in PowerPoint and Impress (137.64 KB, image/png)
2021-06-17 13:01 UTC, NISZ LibreOffice Team
Details
Example file from PowerPoint with timed forwarding (36.27 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2021-06-17 13:02 UTC, NISZ LibreOffice Team
Details
Screenshot of the document with timed forwarding side by side in PowerPoint and Impress (149.70 KB, image/png)
2021-06-17 13:02 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2021-06-17 13:01:21 UTC
Created attachment 172976 [details]
Example file from PowerPoint with manual forwarding

Attached example file contains the slide show setting “Manual forwarding” turned on.
When opened in Impress the Slide Show Settings dialog displays the “Change slides manually” box unchecked.
When the “By timing” option is enabled in PP, the “Change slides manually” box is also unchecked, but that feels only a matching default value and not the result of intentional importing.

Steps to reproduce:
    1. Open attached file
    2. Open Slide Show – Slide Show Settings menu

Actual results:
The “Change slides manually” box is unchecked.

Expected results:
The “Change slides manually” box should be checked.

LibreOffice details:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: b89ebf135818ccaa45bbfb164099a6e199bd7d11
CPU threads: 4; OS: Windows 10.0 Build 18363; UI render: default; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL
Comment 1 NISZ LibreOffice Team 2021-06-17 13:01:43 UTC
Created attachment 172977 [details]
Screenshot of the document with manual forwarding side by side in PowerPoint and Impress
Comment 2 NISZ LibreOffice Team 2021-06-17 13:02:08 UTC
Created attachment 172978 [details]
Example file from PowerPoint with timed forwarding
Comment 3 NISZ LibreOffice Team 2021-06-17 13:02:29 UTC
Created attachment 172979 [details]
Screenshot of the document with timed forwarding side by side in PowerPoint and Impress
Comment 4 Commit Notification 2021-07-27 09:51:24 UTC
Tibor Nagy committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/f8ddaaf0f5e1fb61e0d4404ea28757bc652ae4be

tdf#142915 PPTX import: support for presentation's timing attribute

It will be available in 7.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 NISZ LibreOffice Team 2021-08-10 06:17:22 UTC
Verified in:
Version: 7.3.0.0.alpha0+ (x64) / LibreOffice Community
Build ID: d1f1f546b212ecd651146addeb328806bb270d5f
CPU threads: 4; OS: Windows 10.0 Build 17134; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: hu-HU
Calc: threaded