tdf#142915 PPTX import: support for presentation's timing attribute

Change-Id: Ie4a687a29077cad89f11e77b856c28a1fe09376b